--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SimpleRecyclerView</string>
+    <string name="beautiful_flower_icon">Beautiful flower icon for girls</string>
+    <string name="switch_to_another_screen">Switch to another screen</string>
+    <string name="author_name">Natallia</string>
+    <string name="author_surname">Radaman</string>
 </resources>
