CAPDEV-26689 Recycler View with arrow click counter
Add layout fot header and add additional View Holder and Data View type.

  - Edit DataTypeConstants interface with specific android annotations.
  - Edit ArticlesRecyclerAdapter class.
  - Add ClickCountDataView class.
  - Edit MainActivity class and ContentGenerator class.

CAPDEV-26689 Recycler View with arrow click counter

Refactor of the click handling.

  - Edit DataView interface and classes that implement it: AuthorDataView, ContentDataView and ClickCountDataView.
  - Edit ArticlesRecyclerAdapter class.
  - Edit item_view_type_content layout.
  - Edit MainActivity class and ContentGenerator class.

CAPDEV-26689 Recycler View with arrow click counter

Edit click handling. Edit lint warnings

  - Edit ContentDataView and ClickCountDataViewToHeader classes, DataView interface.
  - Edit ContentGenerator class: some changes in the list of created items.
  - Edit item_view_type_content and item_view_type_header layouts.
  - Change iconfor the content view type.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SimpleRecyclerView</string>
+    <string name="beautiful_flower_icon">Beautiful flower icon for girls</string>
+    <string name="switch_to_another_screen">Switch to another screen</string>
+    <string name="author_name">Natallia</string>
+    <string name="author_surname">Radaman</string>
+    <string name="no_clicks">No clicks on the items.</string>
 </resources>
